--- a/style/Sesion.css
+++ b/style/Sesion.css
@@ -43,3 +43,10 @@ footer ul{
   display: flex;
   justify-content: center;
 }
+
+@media screen and (max-width: 800px){
+  .Game-Results{
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
+}
