--- a/style/index.css
+++ b/style/index.css
@@ -73,13 +73,15 @@ footer ul{
 
 @media screen and (max-width: 800px){
     main {
-        height: 630px;
         width: 100%;
     }
     .Page-Tittle{
         font-size: 55px;
         margin-top: 0px;
         padding-top: 15vh;
+    }
+    footer{
+        height: 50px;
     }
     h2{
         font-size: 20px;
